# test-rust-sgx

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
enclave1/: Cargo.toml
enclave1/src/: enclave.rs  lib.rs  main.rs
enclave2/: Cargo.toml  build.rs
enclave2/src/: enclave.rs  mock.rs
enclaves/: common.mk  enclave.mk
enclaves/enclave1/: Cargo.toml  Makefile  Xargo.toml  build.rs
enclaves/enclave1/src/: lib.rs
enclaves/enclave2/: Cargo.toml  Makefile
enclaves/enclave2/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
