[package]
name = "enclave2"
version = "0.1.0"
authors = ["yihuang <yi.codeplayer@gmail.com>"]
edition = "2018"

[dependencies]
sgx_types = { git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_urts = { git = "https://github.com/apache/teaclave-sgx-sdk.git", optional=true }

[build-dependencies]
cc = "1.0"

[features]
enclave = ["sgx_urts"]
default = []
